--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,46 @@ button:active {
 	display: none;
 }
 
+.container {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	padding-block: 20%;
+}
+
+.container > p {
+	font-size: 24px;
+	width: 50%;
+}
+
+.container > h1 {
+	width: 50%;
+	margin-bottom: 25px;
+}
+
+.container .contacts img {
+	width: 75px;
+	aspect-ratio: 1;
+}
+
+.container .contacts {
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	width: 50%;
+	font-size: 26px;
+}
+
+.container .contacts > div {
+	display: flex;
+	align-items: center;
+	column-gap: 15px;
+}
+
 .brick {
 	display: flex;
 	flex-direction: column;
@@ -405,6 +445,47 @@ menu.opened {
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
+form {
+	margin-inline: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding-block: 50px;
+	padding-inline: 25px;
+	background-color: rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(5px);
+	width: fit-content;
+	border-radius: 15px;
+	padding-bottom: 20px;
+}
+
+form button {
+	width: 100%;
+	font-size: 14px;
+	margin-top: 20px;
+}
+
+form h1 {
+	font-size: 26px;
+}
+
+form label {
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
+	width: 100%;
+}
+
+form input {
+	padding: 5px;
+	padding-inline: 15px;
+	background-color: rgba(255, 255, 255, 0.01);
+	backdrop-filter: blur(5px);
+	outline: none;
+	border-radius: 5px;
+	width: 100%;
+}
+
 @media (max-width: 800px) {
 	.header > div > a > span {
 		display: none;
@@ -429,6 +510,17 @@ menu.opened {
 
 	section > .img.first > * {
 		display: none;
+	}
+
+	.container .contacts img {
+		width: 50px;
+		aspect-ratio: 1;
+	}
+
+	.container .contacts {
+		width: 100%;
+		font-size: 1.2em;
+		grid-template-columns: 1fr;
 	}
 
 	.bricks {
@@ -495,5 +587,14 @@ menu.opened {
 	section > img {
 		height: auto;
 		object-fit: unset;
+	}
+
+	.container > p {
+		width: 100%;
+		font-size: 1.2em;
+	}
+	.container > h1 {
+		font-size: 2em;
+		width: 100%;
 	}
 }
